--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <section class="mb-40">
             <div class="mb-16 flex flex-col lg:flex-row space-y-6 lg:space-y-0 items-center justify-center space-x-5">
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/fruit6.png" alt="Shoes" /></figure>
+                    <figure><img src="images/fruit6.png" alt="Shoes" /></figure>
                     <div class="card-body space-y-6">
                         <div class="space-y-6">
                             <h1 class="card-title flex justify-center">12.90$ - 18.85$</h1>
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/fruit7.png" alt="Shoes" /></figure>
+                    <figure><img src="images/fruit7.png" alt="Shoes" /></figure>
                     <div class="card-body space-y-6">
                         <div class="space-y-6">
                             <h1 class="card-title flex justify-center">12.90$ - 18.85$</h1>
@@ -350,7 +350,7 @@
         <section>
             <div class=" lg:px-0 px-[20px] mb-24">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img class="lg:h-[600px] h-[1100px]" src="images/banner1.png" alt="">
+                    <img class="lg:h-[600px] h-[1100px]" src="./images/banner1.png" alt="">
                     <div class="absolute flex flex-col items-center justify-center w-full lg:h-full top-0 left-0">
                         <div class="text-white text-center space-y-6">
                             <div class="lg:mt-[110px]">
