--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <section class="mb-40">
             <div class="mb-16 flex flex-col lg:flex-row space-y-6 lg:space-y-0 items-center justify-center space-x-5">
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="images/fruit6.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/fruit6.png" alt="Shoes" /></figure>
                     <div class="card-body space-y-6">
                         <div class="space-y-6">
                             <h1 class="card-title flex justify-center">12.90$ - 18.85$</h1>
